updating pipelines yml

--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -15,5 +15,4 @@ pipelines:
       execution:
           onExecute:
             - echo "$res_MyIncomingWebhookResource_payload" | jq '.' > payload.json
-            - read_json payload.json "LESSER_SECRET_FORMULA"
-            - echo payload.json
+            - cat payload.json
