--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -1,3 +1,5 @@
+valuesFilePath: ./values.yml
+
 resources:
   - name: cacheCreatedWebhookRes
     type: IncomingWebhook
@@ -6,7 +8,7 @@ resources:
   - name: cached_artifact_build_info
     type: BuildInfo
     configuration:
-      sourceArtifactory: {{ .Values.artIntegration }}
+      sourceArtifactory: {{ .Values.var.artIntegration }}
  
 pipelines:
   - name: scan_copy
