Reading payload json 3

--- a/.jfrog-pipelines/pipeline.yml
+++ b/.jfrog-pipelines/pipeline.yml
@@ -18,8 +18,12 @@ pipelines:
         onExecute:
           - echo "$res_cacheCreatedWebhookRes_payload" | jq '.' > payload.json
           - cat payload.json
-          - read_json payload.json "data.repo_key"
-          - read_json payload.json "data.path"
+          - repo_key = read_json payload.json "data.repo_key"
+          - path = read_json payload.json "data.path"
+          - name = read_json payload.json "data.name"
+          - echo repo_key
+          - echo name
+          - echo path
           #- jf docker scan reg1/repo1/img1:1.0.0
 #    - name: get_artifact
 #      type: Bash
